* new feature: privacy policy checkbox for GDPR when there is no front end user * set PIDprivacyPolicy to the privacy policy page. * HTML templates: remove the font entries. Use CSS instead.

--- a/template/board_help.tmpl
+++ b/template/board_help.tmpl
@@ -6,41 +6,41 @@
 	<td colspan=2>
 	
 	<div align="center"><h3>Board Codes</h3></div>
-	<font face=verdana size=2>
+	
 	You must insert a code in the CODE field of the "List" content element before the board will work. The code tells the board module what to do. You can insert multiple codes by separating them by a comma.<br>
-	Here is an example:<br><BR>
+	Here is an example:<br><br>
 	<div align="center"><img src="###PATH###/res/icons/fe/board_help1.gif" width="375" height="226" border="2" alt=""></div>
 
 	
 	<HR>
 	The current display mode has not been set.<br />
 	Current CODE = "<b>###CODE###</b>"
-	</font>
+	
 	</td>
 </tr>
 <tr>
-	<td><font face=verdana size=2><strong>LIST_CATEGORIES</strong></font></td>
-	<td><font face=verdana size=2>Lists the categories and forums in categories.</font></td>
+	<td><strong>LIST_CATEGORIES</strong></td>
+	<td>Lists the categories and forums in categories.</td>
 </tr>
 <tr>
-	<td><font face=verdana size=2><strong>LIST_FORUMS</strong></font></td>
-	<td><font face=verdana size=2>Lists the forums.</font></td>
+	<td><strong>LIST_FORUMS</strong></td>
+	<td>Lists the forums.</td>
 </tr>
 <tr>
-	<td><font face=verdana size=2><strong>FORUM</strong></font></td>
-	<td><font face=verdana size=2>Lists the content of a forum. If tt_board_uid is set as GET/POST var, that board-item/list is displayed instead.</font></td>
+	<td><strong>FORUM</strong></td>
+	<td>Lists the content of a forum. If tt_board_uid is set as GET/POST var, that board-item/list is displayed instead.</td>
 </tr>
 <tr>
-	<td><font face=verdana size=2><strong>POSTFORM</strong></font></td>
-	<td><font face=verdana size=2>Displays a submit-form used to post replies/new threads.</font></td>
+	<td><strong>POSTFORM</strong></td>
+	<td>Displays a submit-form used to post replies/new threads.</td>
 </tr>
 <tr>
-	<td><font face=verdana size=2><strong>POSTFORM_REPLY</strong></font></td>
-	<td><font face=verdana size=2>As above, but only if it is a reply.</font></td>
+	<td><strong>POSTFORM_REPLY</strong></td>
+	<td>As above, but only if it is a reply.</td>
 </tr>
 <tr>
-	<td><font face=verdana size=2><strong>POSTFORM_THREAD</strong></font></td>
-	<td><font face=verdana size=2>As above, but only if it is a new thread.</font></td>
+	<td><strong>POSTFORM_THREAD</strong></td>
+	<td>As above, but only if it is a new thread.</td>
 </tr>
 </table>
 <!--###TEMPLATE_DEFAULT### end -->
