--- a/template/board_template1.tmpl
+++ b/template/board_template1.tmpl
@@ -88,10 +88,10 @@ LINK
 <table cellpadding="2"  border="0" width="98%" class="tx-ttboard-overview">
 	<tr bgcolor="###GC3###">
 		<td>&nbsp;</td>
-		<td height="21" valign="middle">###GW3B### <b>###BOARD_FORUM###</b> ###GW3E###</td>
-    <td valign="middle" align="center"><b>###GW3B### ###BOARD_POSTS### ###GW3E###</b></td>
-		<td valign="middle" align="center"><b>###GW3B### ###BOARD_THREADS### ###GW3E###</b></td>
-		<td valign="middle" align="center">###GW3B### <b>###BOARD_LAST_POST###</b>###GW3E###</td>
+		<td height="21" valign="middle">###GW3B### <strong>###BOARD_FORUM###</strong> ###GW3E###</td>
+    <td valign="middle" align="center"><strong>###GW3B### ###BOARD_POSTS### ###GW3E###</strong></td>
+		<td valign="middle" align="center"><strong>###GW3B### ###BOARD_THREADS### ###GW3E###</strong></td>
+		<td valign="middle" align="center">###GW3B### <strong>###BOARD_LAST_POST###</strong>###GW3E###</td>
 	</tr>
 	<!-- ###CONTENT###  begin
 		This is the part of the template substituted with the list of categories and forums:
@@ -100,7 +100,7 @@ LINK
 			Template for the category title
 		-->
 			<tr bgcolor="###GC4###">
-				<td colspan="5"><b>###GW2B###<font color="#FFFFFF"><!-- ###LINK### begin -->###CATEGORY_TITLE###<!-- ###LINK### end --></font>###GW2E###</b></td>
+				<td colspan="5"><strong>###GW2B###<!-- ###LINK### begin -->###CATEGORY_TITLE###<!-- ###LINK### end -->###GW2E###</strong></td>
 			</tr>
 		<!-- ###CATEGORY###  end -->
 		<!-- ###FORUM### begin
@@ -108,7 +108,7 @@ LINK
 		-->
 			<tr>
 				<td bgcolor="###GC2###" align="center" valign="top"><img src="clear.gif" width=20 height=1 border="0"></td>
-				<td bgcolor="###GC2###" valign="top">###GW1B### <b><!-- ###LINK### begin -->###FORUM_TITLE###<!-- ###LINK### end --></b>###GW1E###<br />###GW2B### ###FORUM_DESCRIPTION### ###GW2E###</td>
+				<td bgcolor="###GC2###" valign="top">###GW1B### <strong><!-- ###LINK### begin -->###FORUM_TITLE###<!-- ###LINK### end --></strong>###GW1E###<br />###GW2B### ###FORUM_DESCRIPTION### ###GW2E###</td>
 				<td bgcolor="###GC1###" align="center" valign="top">###GW1B### ###FORUM_POSTS### ###GW1E###</td>
 				<td bgcolor="###GC2###" align="center" valign="top">###GW1B### ###FORUM_THREADS### ###GW1E###</td>
 				<td bgcolor="###GC1###" valign="top" align="center">###GW2B### <!-- ###LINK_LAST_POST### begin -->###BOARD_LAST_POST###!<!-- ###LINK_LAST_POST### end --> ###LAST_POST_DATE### ###LAST_POST_TIME###<br />###LAST_POST_AUTHOR### - ###LAST_POST_AGE### ###GW2E###</td>
@@ -119,7 +119,7 @@ LINK
 		-->
 			<tr>
 				<td align="center" valign="top">NEW!</td>
-				<td valign="top"><!-- ###LINK### begin -->###GW1B### <b>###POST_TITLE###</b>###GW1E###<!-- ###LINK### end --><br />###GW2B### ###POST_CONTENT### ###GW2E###</td>
+				<td valign="top"><!-- ###LINK### begin -->###GW1B### <strong>###POST_TITLE###</strong>###GW1E###<!-- ###LINK### end --><br />###GW2B### ###POST_CONTENT### ###GW2E###</td>
 				<td align="center" valign="top">###GW1B### ###POST_REPLIES### ###GW1E###</td>
 				<td align="center" valign="top">###GW1B### &nbsp; ###GW1E###</td>
 				<td valign="top" align="center">###GW2B### ###POST_DATE###  ###POST_TIME###<br />###POST_AUTHOR### ###GW2E###</td>
@@ -174,10 +174,10 @@ LINK_LAST_POST
     <tr><td><!-- ###LINK_PREV### begin --><!-- ###LINK_PREV### end --></td><td colspan="8"><!-- ###LINK_BROWSE### begin -->[ ###BROWSE_LINKS### ]<!-- ###LINK_BROWSE### end--></td><td></td></tr>
 	<tr bgcolor="###GC3###">
         <td><!-- ###LINK_NEXT### begin --><!-- ###LINK_NEXT### end --></td>
-		<td colspan="4">###GW3B### <b>###FORUM_TITLE###</b> ###GW3E###</td>
-		<td align="center">###GW3B### <b>###BOARD_THREAD_STARTER###</b> ###GW3E###</td>
-		<td align="center">###GW3B### <b>###BOARD_REPLIES###</b> ###GW3E###</td>
-		<td colspan="3" align="center">###GW3B### <b>###BOARD_LAST_POST###</b> ###GW3E###</td>
+		<td colspan="4">###GW3B### <strong>###FORUM_TITLE###</strong> ###GW3E###</td>
+		<td align="center">###GW3B### <strong>###BOARD_THREAD_STARTER###</strong> ###GW3E###</td>
+		<td align="center">###GW3B### <strong>###BOARD_REPLIES###</strong> ###GW3E###</td>
+		<td colspan="3" align="center">###GW3B### <strong>###BOARD_LAST_POST###</strong> ###GW3E###</td>
 	</tr>
 	<!-- ###CONTENT### begin -->
 		<!--###POST### begin -->
@@ -193,7 +193,7 @@ LINK_LAST_POST
 	<tr bgcolor="###GC1###">
   	<td colspan="10">
     <form action="###FORM_URL###" method="POST" name="tt-board-search">
-  	###GW1B###<b>Suchen: </b>###GW1E###<input type="text" name="###SEARCH_NAME###" value="###SEARCH_WORD###">	<input type="submit" id="boardSearchSubmitId" value="Search in the board">
+  	###GW1B###<strong>Suchen: </strong>###GW1E###<input type="text" name="###SEARCH_NAME###" value="###SEARCH_WORD###">	<input type="submit" id="boardSearchSubmitId" value="Search in the board">
   	</form>
     </td>
 	</tr>
@@ -256,7 +256,7 @@ LINK_NEXT_POST
 -->
 <table width="98%" border="0" cellspacing="1" cellpadding="4" class="tx-ttboard-table-thread">
 	<tr bgcolor="###GC3###">
-		<td valign="middle" width="175">###GW3B###<b>###BOARD_AUTHOR###</b>###GW3E###</td>
+		<td valign="middle" width="175">###GW3B###<strong>###BOARD_AUTHOR###</strong>###GW3E###</td>
 		<td valign="middle" width="100%">&nbsp;</td>
 	</tr>
 	<!-- ###CONTENT###  begin -->
@@ -267,7 +267,7 @@ LINK_NEXT_POST
 			</tr>
 			<tr bgcolor="###GC1###">
 				<td width="175" valign="top">
-					###GW1B### <b>###POST_AUTHOR###</b>###GW1E###<br />
+					###GW1B### <strong>###POST_AUTHOR###</strong>###GW1E###<br />
 				</td>
 				<td valign="top">
 					###GW1B### ###POST_CONTENT### ###GW1E###
@@ -281,7 +281,7 @@ LINK_NEXT_POST
 			</tr>
 			<tr bgcolor="###GC2###">
 				<td width="175" valign="top">
-					###GW1B### <b>###POST_AUTHOR###</b>###GW1E###<br />
+					###GW1B### <strong>###POST_AUTHOR###</strong>###GW1E###<br />
 				</td>
 				<td valign="top">
 					###GW1B### ###POST_CONTENT### ###GW1E###
@@ -290,7 +290,7 @@ LINK_NEXT_POST
 		<!--###POST_1### end -->
 	<!-- ###CONTENT###  end -->
 	<tr>
-		<td colspan=2><!--###LINK_BACK_TO_FORUM###-->###GW2B### <b>&lt; BACK TO FORUM</b> ###GW2E###<!--###LINK_BACK_TO_FORUM###--></td>
+		<td colspan=2><!--###LINK_BACK_TO_FORUM###-->###GW2B### <strong>&lt; BACK TO FORUM</strong> ###GW2E###<!--###LINK_BACK_TO_FORUM###--></td>
 	</tr>
 </table>
 <!-- ###TEMPLATE_THREAD### end -->
