* move res/icons/fe/board_help1.gif -> Resources/Public/Icons/board_help1.gif * move res/icons/fe/thread.gif -> Resources/Public/Icons/List/thread.gif

--- a/template/board_template1.tmpl
+++ b/template/board_template1.tmpl
@@ -182,7 +182,7 @@ LINK_LAST_POST
 	<!-- ###CONTENT### begin -->
 		<!--###POST### begin -->
 			<tr>
-				<td align="center" bgcolor="###GC2###" width="20"><img src="###PATH###res/icons/fe/thread.gif"></td>
+				<td align="center" bgcolor="###GC2###" width="20"><img src="###PATH###Resources/Public/Icons/List/thread.gif"></td>
 				<td colspan="4" bgcolor="###GC2###">###GW1B### <!--###LINK###-->###POST_TITLE###<!--###LINK###--><br>###GW1E###</td>
 				<td align="center" bgcolor="###GC1###">###GW1B### ###POST_AUTHOR### ###GW1E###</td>
 				<td align="center" bgcolor="###GC2###">###GW1B### ###POST_REPLIES### ###GW1E###</td>
