* bugfix: Do not write "post new replay" at the bottom for a new post. Use the text "new post" instead.

--- a/Resources/Private/Templates/board_template1.tmpl
+++ b/Resources/Private/Templates/board_template1.tmpl
@@ -193,16 +193,12 @@ LINK_LAST_POST
 	<tr bgcolor="###GC1###">
   	<td colspan="10">
     <form action="###FORM_URL###" method="POST" name="tt-board-search">
-  	###GW1B###<strong>Suchen: </strong>###GW1E###<input type="text" name="###SEARCH_NAME###" value="###SEARCH_WORD###">	<input type="submit" id="boardSearchSubmitId" value="Search in the board">
+  	###GW1B###<strong>Suchen: </strong>###GW1E###<input type="text" name="###SEARCH_NAME###" value="###SEARCH_WORD###">	<input type="submit" id="boardSearchSubmitId" value="###BUTTON_SEARCH###">
   	</form>
     </td>
 	</tr>
 </table>
 <!-- ###TEMPLATE_FORUM### end -->
-
-
-
-
 
 
 
