* new feature: Set fillSubject in order to fill in the subject field of the entry form with the subject of the first post. The text post.fillSubjectPrefix will be used as a prefix. * new feature: Add a post thanks message at the beginning of the entry form. * data protection: Pass the email addresses inside of a TYPO3 session.

--- a/Resources/Private/Templates/board_template3.tmpl
+++ b/Resources/Private/Templates/board_template3.tmpl
@@ -121,7 +121,7 @@ For the full list of markers/subparts, see board_template1.tmpl<br>
 
 <br><br><br><br><hr><br><br><br>
 <h3>TEMPLATE_THREAD</h3>
-<em>Template for the listing of a the posts in a thread.</em><br>
+<em>Template for the listing of the posts in a thread.</em><br>
 
 
 <!-- ###TEMPLATE_THREAD### begin
