--- a/Resources/Private/Templates/board_template3.tmpl
+++ b/Resources/Private/Templates/board_template3.tmpl
@@ -58,7 +58,7 @@ For the full list of markers/subparts, see board_template1.tmpl<br>
 			Template for the display of forum information
 		-->
 			<tr>
-				<td bgcolor="#CECAC3" align="center" valign="top"><IMG src="clear.gif" width=20 height=1 border="0"></td>
+				<td bgcolor="#CECAC3" align="center" valign="top"><img src="clear.gif" width=20 height=1 border="0"></td>
 				<td bgcolor="#CECAC3" valign="top"><strong><!-- ###LINK### begin -->###FORUM_TITLE###<!-- ###LINK### end --></strong><br>###FORUM_DESCRIPTION###</td>
 				<td bgcolor="#CECAC3" align="center" valign="top" nowrap>###FORUM_POSTS###</td>
 				<td bgcolor="#CECAC3" align="center" valign="top" nowrap>###FORUM_THREADS###</td>
