* add new field city

--- a/Resources/Private/Templates/board_template1.tmpl
+++ b/Resources/Private/Templates/board_template1.tmpl
@@ -58,6 +58,7 @@ FORUM_DESCRIPTION
 LAST_POST_DATE,
 LAST_POST_TIME
 LAST_POST_AUTHOR
+LAST_POST_CITY
 LAST_POST_AGE
 
 // Forum subparts:
@@ -70,6 +71,7 @@ POST_TITLE  // include link
 POST_CONTENT
 POST_REPLIES
 POST_AUTHOR
+POST_CITY
 
 POST_DATE,
 POST_TIME
@@ -148,6 +150,7 @@ POST_TITLE
 POST_CONTENT
 POST_REPLIES
 POST_AUTHOR
+POST_CITY
 
 POST_DATE
 POST_TIME
@@ -156,6 +159,7 @@ POST_AGE
 LAST_POST_DATE
 LAST_POST_TIME
 LAST_POST_AUTHOR
+LAST_POST_CITY
 LAST_POST_AGE
 
 
@@ -231,6 +235,7 @@ POST_TITLE
 POST_CONTENT
 POST_REPLIES
 POST_AUTHOR
+POST_CITY
 POST_AUTHOR_EMAIL
 
 POST_DATE,
