--- a/Resources/Private/Templates/list_message_board.html
+++ b/Resources/Private/Templates/list_message_board.html
@@ -262,6 +262,7 @@ POST_TITLE
 POST_CONTENT
 POST_REPLIES
 POST_AUTHOR
+POST_CITY
 
 POST_DATE
 POST_TIME
@@ -270,6 +271,7 @@ POST_AGE
 LAST_POST_DATE
 LAST_POST_TIME
 LAST_POST_AUTHOR
+LAST_POST_CITY
 LAST_POST_AGE
 
 
@@ -423,6 +425,7 @@ POST_TITLE
 POST_CONTENT
 POST_REPLIES
 POST_AUTHOR
+POST_CITY
 POST_AUTHOR_EMAIL
 
 POST_DATE,
