* add the field tstamp to the TCA * add the page browser header to the ###TEMPLATE_FORUM### subpart of the template file board_template2.html

--- a/Resources/Private/Templates/board_template2.tmpl
+++ b/Resources/Private/Templates/board_template2.tmpl
@@ -18,7 +18,7 @@ For the full list of markers/subparts, see board_template1.tmpl<br>
 
 
 <br><br><br><br><HR><br><br><br>
-<h3>TEMPLATE_OVERVIEW</h3>
+<h3>TEMPLATE_OVERVIEW</h3>+
 <em>This is the template for the overview of categories and forums.</em><br>
 <br>
 <br>
@@ -80,6 +80,7 @@ For the full list of markers/subparts, see board_template1.tmpl<br>
 	<tr class="tx-ttboard-list-row-forum">
         <td class="tree_cell_header_forum" colspan="3">###GW1B### ###FORUM_TITLE######GW1E###</td>
     </tr>
+    <tr><td><!-- ###LINK_PREV### begin --><!-- ###LINK_PREV### end --></td><td colspan="8"><!-- ###LINK_BROWSE### begin -->[ ###BROWSE_LINKS### ]<!-- ###LINK_BROWSE### end--></td><td></td></tr>
 	<tr class="tx-ttboard-catlistheader-forum">
 		<td class="tx-ttboard-tree-cell-header-forum" bgcolor="###GC3###" width="40%">###GW3B### ###BOARD_TOPICS###: ###GW3E###</td>
 		<td class="tx-ttboard-tree-cell-header-forum" bgcolor="###GC3###" width="30%">###GW3B### ###BOARD_AUTHOR###: ###GW3E###</td>
